--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1268,6 +1268,62 @@ Granularities},
               processing;Pattern recognition;Taxonomy;Genetics;Computer science"
 }
 
+
+@INPROCEEDINGS{Dang2014-tw,
+   title     = "{ScagExplorer}: Exploring Scatterplots by Their Scagnostics",
+   booktitle = "2014 {IEEE} Pacific Visualization Symposium",
+   author    = "Dang, T N and Wilkinson, L",
+   abstract  = "A scatter plot displays a relation between a pair of variables.
+                Given a set of v variables, there are v(v- 1)/2 pairs of
+                variables, and thus the same number of possible pair wise
+                scatter plots. Therefore for even small sets of variables, the
+                number of scatter plots can be large. Scatter plot matrices
+                (SPLOMs) can easily run out of pixels when presenting
+                high-dimensional data. We introduce a theoretical method and a
+                testbed for assessing whether our method can be used to guide
+                interactive exploration of high-dimensional data. The method is
+                based on nine characterizations of the 2D distributions of
+                orthogonal pair wise projections on a set of points in
+                multidimensional Euclidean space. Working directly with these
+                characterizations, we can locate anomalies for further analysis
+                or search for similar distributions in a large SPLOM with more
+                than a hundred dimensions. Our testbed, ScagExplorer, is
+                developed in order to evaluate the feasibility of handling huge
+                collections of scatter plots.",
+   pages     = "73--80",
+   month     =  mar,
+   year      =  2014,
+   keywords  = "computer graphics;data handling;graph theory;interactive
+                systems;ScagExplorer;variables;pairwise scatterplots;scatterplot
+                matrices;high-dimensional data;theoretical method;interactive
+                exploration;2D distributions;orthogonal pairwise
+                projections;multidimensional Euclidean space;large
+                SPLOM;Clustering algorithms;Silicon;Layout;Educational
+                institutions;Data visualization;Correlation;Time series
+                analysis;Scagnostics;Scatterplot matrix;High-Dimensional Visual
+                Analytics;Leader algorithm;forced-directed layout;Design
+                MethodologyPattern analysis"
+ }
+ 
+@inproceedings{wilkinson2005graph,
+  title={Graph-theoretic scagnostics},
+  author={Wilkinson, Leland and Anand, Anushka and Grossman, Robert},
+  booktitle={IEEE Symposium on Information Visualization, 2005. INFOVIS 2005.},
+  pages={157--164},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{tukey1988computer,
+  title={Computer graphics and exploratory data analysis: An introduction},
+  author={Tukey, John W and Tukey, Paul A},
+  journal={The Collected Works of John W. Tukey: Graphics: 1965-1985},
+  volume={5},
+  pages={419},
+  year={1988},
+  publisher={Wadsworth Publishing Company}
+}
+
 #### 
 
 
