--- a/main.Rmd
+++ b/main.Rmd
@@ -168,8 +168,8 @@ The paper @Gupta2020-vo describes how we can compute all possible combinations o
 <!-- Scagnostics literature -->
 This is similar to Scagnostics (Scatterplot Diagnostics) by @tukey1988computer, which is used to discern meaningful patterns in large collections of scatterplots. Given a set of $v$ variables, there are $v(v-1)/2$ pairs of variables, and thus the same number of possible pairwise scatterplots. Therefore
 for even small $v$, the number of scatterplots can be
-large, and scatterplot matrices (SPLOMs) could easily run out of pixels when presenting high-dimensional data. @Dang2014-tw and @wilkinson2005graph provides potential solutions to this, where few characterizations help us to locate anomalies for further analysis or search for similar distributions in a "large" SPLOM with more than a hundred dimensions.
-
+large, and scatterplot matrices (SPLOMs) could easily run out of pixels when presenting high-dimensional data. @Dang2014-tw and @wilkinson2005graph provides potential solutions to this, where few characterizations help us to locate anomalies for defining several measures aimed to detect anomalies in density, shape, trend, and
+other features in the 2D point scatters.
 
 <!-- harmonies and why it is not enough -->
 The paper (@Gupta2020-vo) narrows down the search from $^{N_C}P_2$ plots by identifying pairs of granularities that can be meaningfully examined together (a "harmony"), or when they cannot (a "clash"). However, even after excluding clashes, the list of harmonies left could be enormous for exhaustive exploration. Hence, there is a need to reduce the search even further by including only those harmonies which are informative enough. Also, ranking the remaining harmony pairs based on how well they capture the variation in the measured variable could be potentially useful.  
@@ -181,14 +181,15 @@ In this paper, we aim to build a new measure to follow through these two main ob
 
 <!-- Talk about Scagnostics: Tukey -->
 
-# Median Maximum Pairwise Distances (MMPD)
+# Proposed measure: Median Maximum Pairwise Distances (MMPD)
 
-## Principle
+We are interested in assessing structure in probability distributions of the measured variable across bivariate cyclic granularities. We propose a measure called Median Maximum Pairwise Distances (MMPD) to evaluate structure in such a design.
+
+## Idea
 
 The principle employed for building a new metric is explained through a simple example explained in Figure \ref{fig:null4by2}. Each of these figures have the same panel design with 2 x-axis categories and 4 facet levels. Figure \ref{fig:null4by2}a has all x categories drawn from N(5, 10) distribution for each facet. It is not an interesting display particularly, as distributions do not vary across x-axis or facet categories. Figure \ref{fig:null4by2}b has x categories drawn from the same distribution within a facet and different for different facet categories. Figure \ref{fig:null4by2}b exhibits an exact opposite situation where distribution between the x-axis categories within each facet is different but they are same across facets. Figure \ref{fig:null4by2}d takes a step further by varying the distribution across both facet and x-axis categories. If we are asked to rank the displays in order of importance from minimum to maximum, we might order it as a, b, c and then d. It might be argued that it is not clear if b should precede or succeed c. Gestalt theory suggests that when items are placed in close proximity, people assume that they are in the same group because they are close to one another and apart from other groups. Hence, displays that capture more variation within different categories in the same group would be important to bring out different patterns of the data. With this principle, display b could be considered less informative as compared to display c.
 
 With reference to the graphical design in \ref{@Gupta2020-vo}, therefore the idea would be to rate a harmony pair higher if the variation between different levels of the x-axis variable is higher on an average across all levels of the facet variables. Thus the metric could be obtained by computing maximum pairwise distances between distributions of the continuous random variable across x-axis categories for all facets and then taking the median of those maximum pairwise distances across facets. This would help capture the average maximum difference in distribution of the measurement variable explained by the two cyclic granularities together. We call this metric MMPD which stands for Median Maximum Pairwise Distances. In the next section we shall see how we go about computing this measure.
-
 
 
 
@@ -226,14 +227,12 @@ ggpubr::ggarrange(p1, p2, p3, p4, nrow = 2, ncol = 2,
 ```
 
 
-
-
 <!-- in the same group would be important to bring out different patterns of the data. -->
 
 
-## Computation
+# Computation
 
-### Distance between distributions
+## Distance between distributions
 
 <!-- One of the most important class of divergence is the f-divergence and includes measures like Kullback-Leibler divergence, Hellinger distance etc. The continuous version of f -divergence is given by -->
 <!-- $$D_f(P||Q) := \int q(x)f(\frac{p(x)}{q(x)})$$, where -->
@@ -260,8 +259,7 @@ Jensen-Shannon distances (JSD) are distributed as chi-squared with $m$ df where 
 With large $m$, chi-squared is asymptotically normal by the CLT. Thus, by CLT, ${\chi^2}_{m} \tilde{} N(m, 2m)$, which would depend on the number of discretization used to approximate the continuous distribution. Then $b_n = 1-1/n$ quantile of the normal distribution and $a_n = 1/[n*\phi(b_n)]$ where $\phi$ is the normal density function. $n$ is the number of pairwise comparisons being made.
 
 
-
-### Normalize distances
+## Normalize distances
 
 <!-- The harmony pairs could be arranged from highest to lowest average maximum pairwise distances across different levels of the harmonies. -->
 
@@ -327,20 +325,22 @@ ggpubr::ggarrange(g1, g2, ncol = 2)
 
 ```
 
-### Distribution of distances
-
-### Theoretical evidence
-
-JS distances are distributed as chi-squared with $m$ df where we discretize the continuous distribution with $m$ discrete values. Taking sample percentiles to approximate the integral would mean taking $m = 99$.
-With large $m$, chi-squared is asymptotically normal by the CLT. Thus, by CLT, ${\chi^2}_{m} \tilde{} N(m, 2m)$, which would depend on the number of discretization used to approximate the continuous distribution. Then $b_n = 1-1/n$ quantile of the normal distribution and $a_n = 1/[n*\phi(b_n)]$ where $\phi$ is the normal density function. $n$ is the number of pairwise comparisons being made.
-
-### Empirical evidence
-
-Distribution of JS distances is assumed to be normal but the mean and variance are estimated from the sample, rather than deducing it from the number of discretization used to approximate the continuous distribution. We look at different scenarios, where observations are collected from Normal, Exponential, Chi-squared and Gumbel distribution and found the distribution of JS distances are similar, irrespective of which distribution they are drawn from.
+# Simulation study
 
 
+<!-- ### Distribution of distances -->
 
-#### Initial distribution of observed variables shown in plot title
+<!-- ### Theoretical evidence -->
+
+<!-- JS distances are distributed as chi-squared with $m$ df where we discretize the continuous distribution with $m$ discrete values. Taking sample percentiles to approximate the integral would mean taking $m = 99$. -->
+<!-- With large $m$, chi-squared is asymptotically normal by the CLT. Thus, by CLT, ${\chi^2}_{m} \tilde{} N(m, 2m)$, which would depend on the number of discretization used to approximate the continuous distribution. Then $b_n = 1-1/n$ quantile of the normal distribution and $a_n = 1/[n*\phi(b_n)]$ where $\phi$ is the normal density function. $n$ is the number of pairwise comparisons being made. -->
+
+<!-- ### Empirical evidence -->
+
+<!-- Distribution of JS distances is assumed to be normal but the mean and variance are estimated from the sample, rather than deducing it from the number of discretization used to approximate the continuous distribution. We look at different scenarios, where observations are collected from Normal, Exponential, Chi-squared and Gumbel distribution and found the distribution of JS distances are similar, irrespective of which distribution they are drawn from. -->
+
+
+<!-- #### Initial distribution of observed variables shown in plot title -->
 
 <!-- ```{r distv11} -->
 
@@ -362,7 +362,7 @@ Distribution of JS distances is assumed to be normal but the mean and variance a
 
 
 
-## Algorithm 
+# Algorithm 
 
 \noindent The algorithm employed for computing MMPD is summarized as follows:
 <!-- Algorithm -->
@@ -390,31 +390,6 @@ $\forall i, j \in N_C$
 7. Compute MMPD = median $(NM_1, NM_2, \dots, NM_K)$/log($K$).
 
 8. Repeat Steps 1 to 7 for all harmony pairs.
-
-### Bounds
-
-This is not correct because MMPD should be median of standardized Gumbel distribution. So no bound?
-
-By @Lin1991-fj,
-$$ 0 \leq JSD(P||Q) \leq ln(2)$$.
-
-Thus,  $$ 0 \leq MMPD \leq \frac{ln(2)}{ln(k)}$$.
-Now, by assumption $k \geq 2$ and hence,
-<!-- \begin{equation} -->
-<!-- For k = 2, $\frac{ln(2)}{ln(k)} = 1$  -->
-<!-- \end{equation} -->
-<!-- For $k > 2$, $\frac{ln(2)}{ln(k)}  <1$. -->
-
-
-\[\frac{ln(2)}{ln(k)} : \left\{
-  \begin{array}{lr}
-    1 & if \ k = 2\\
-    <1 & if \ k \ge 2
-  \end{array}
-\right.
-\]
-
-Thus, $$ 0 \leq MMPD \leq \ 1$$
 
 # The statistical test
 
@@ -475,112 +450,6 @@ smart_harmony %>%
   rename("rankun" = "r") %>% kable()
 ```
 
-## Design and analysis of simulation experiments
-
-The behavior of the test statistic is monitored and understood through simulation experiments. A single simulation consisting of computational operations on a panel generating MMPD the value of which represents to what extent a pair of cyclic granularities would be interesting when displayed in the design. In comparing different simulation runs, we distinguish between different distributions and simulation scenarios (also iterations may be).
-
-### Simulated designs:
-
- D1. Same distribution of the measured variable across all x-axis and facet categories
- D2. Different distribution across facet categories but same across x-axis categories
- D3. Different distribution across x-axis categories but same across facet categories
- D4. Different across both x-axis and facet categories 
- 
-Each of these case scenarios tried against following distribution to check if underlying distribution has a role to play.
-
- a) Normal 
- b) Exponential
- c) Gamma
- d) Weibull
-
-
-### Environment
-
-R version 4.0.1 (2020-06-06) is used with platform: x86_64-apple-darwin17.0 (64-bit) running under: macOS Mojave 10.14.6
-
-
-### Experimental set up
-
-This section desctibes the design of simulation runs, in terms of the scenarios simulated, the number of permutations used to compute estimates and to display the distribution of MMPD.
-
- <!-- - seed while generating random observations `seed1 = set.seed(9999)`   -->
- <!-- - grid with how many x levels `range_nx_vec = seq(2:4)`   -->
- <!-- - grid with how many facet levels `range_nfacet_vec = seq(2:4)`   -->
- <!-- - number of observations to be generated `ntimes_val = 500`   -->
- <!-- - number of permutation of data done to compute estimates `nperm_val = 2`   -->
- <!-- - number of permutations of data done to display histogram for each panel `nsim_val = 10`    -->
- <!-- - ordered or un-ordered categories of x levels while computing distances `dist_ordered_val = TRUE`   -->
- <!-- - distance between which quantiles are computed `quantile_prob_vec = seq(0.01, 0.99, 0.01)`   -->
-
-```{r}
-knitr::include_graphics("Figs/simulation.png")
-```
-
-
-Observations from the null distribution are chosen as:  
-`sim_norm_null =   distributional::dist_normal(5, 10)`  
-`sim_exp_null  =   distributional::dist_expoential(5)`  
-`sim_gamma_null  =   distributional::dist_gamma(0.5, 2)`  
-`sim_weibull_null  =   distributional::dist_weibull(1.5, 3)`  
-
-The various designs are selected by increasing the mean/rate/shape of these distributions proportionally with that parameter.
-
-<!-- To check if different distributions impact, simulate data from different distributions. A 3 way contingency table with number of facet levels, x-axis levels and distribution type should be constructed with each cell value as the p-value. -->
-
-<!-- Table -->
-<!-- Conclusions -->
-<!-- (in Null distribution) -->
-
-<!-- #### Varying distribution across facet -->
-<!-- #### Varying distribution across x-axis -->
-<!-- #### Varying distribution across both facets and x-axis -->
-<!-- #### Repeat all with varying facet and x-axis levels -->
-
-<!-- Table -->
-<!-- Conclusions -->
-<!-- (in power) -->
-
-
-### Simulation results 
-
-#### Null distribution 
-
-Under the null hypothesis, all the combinations of x-axis and facets are obtained from the same distribution. We need to study the distribution of the mmpd values under the null hypothesis to see if comparison of their values across different x-axis and facet levels are at all possible.
-
-```{r}
-# all_files = list.files(path = "../hakear-drake/data", pattern = ".rds")
-# all_files
-# 
-# read_files = lapply(all_files, function(x){
-#   read_rds(paste0("../hakear-drake/data/", x))
-# })
-# 
-# names(read_files) = str_remove(all_files, pattern = ".rds")
-# 
-# null_all = bind_rows(normal = read_files$null_normal,
-#                      exponential = read_files$null_exp,
-#                      gamma = read_files$null_gamma,
-#                      weibull = read_files$null_weibull,
-#                      .id = "distribution")
-design_all = readr::read_rds("../hakear-drake/data/design_all.rds")
-
-design_all$design = 
-  factor(design_all$design,
-         levels = c("null","vary_f", "vary_x", "vary_all"), labels = c("D1", "D2", "D3", "D4"))
-
-design_all$distribution = 
-  factor(design_all$distribution,
-         levels = c("normal","exponential", "gamma", "weibull"), labels = c("norm", "exp", "gam", "wei"))
-
-library(dplyr)
-library(ggplot2)
-ggplot2::ggplot(design_all %>% 
-                      filter(design == "D1")) +
-  ggridges::geom_density_ridges(aes(y = distribution, x = mmpd.x, fill = distribution)) + 
-  facet_grid(nx~nfacet) +
-  scale_fill_viridis_d() +
-  xlab("MMPD")
-```
 
 #### Characteristics under different simulation designs   
 
